--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div id="terminal">
           <div id="output"></div>
           <div class="prompt">
-            <span class="green">peter</span>
+            <span class="green">bender</span>
             <span>@</span>
-            <span class="cyan">macbook</span>
+            <span class="cyan">bushwick</span>
             <span>:</span>
             <span class="purple">~</span>
             <span class="red">&nbsp;$&nbsp;</span>
